--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-<META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com">
+<!-- META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com" --> 
+
 <title></title>
 </head>
-<body></body>
+<body>
+
+Under Construction!!!</body>
 </html>
