--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<!-- META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com" --> 
+META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com"
 
 <title></title>
 </head>
 <body>
 
-Under Construction!!!</body>
+Go to my new website!</body>
 </html>
