--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 <head>
-META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com"
+<META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://wycchen.pancakeapps.com">
 
 <title></title>
 </head>
-<body>
-
-Go to my new website!</body>
+<body> </body>
 </html>
