add theory day info

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<p> Postdoctoral Fellow </br> Institute of Information Science <br> Academia Sinica, Taiwan 
 									</header>
 									<p> 
-                                    Primary email: wycchen at iis.sinica.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="http://wycchen.github.io">wycchen.github.io</a> </p>
+                                    Primary email: wycchen at iis.sinica.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="https://wycchen.github.io">wycchen.github.io</a> <br> <br> Recently, we organize an experimental event, <a href="https://theoryday.github.io/">Theory Day in Taiwan</a>, that aims to stimulate interaction and discussion for theoretical computer science researchers in Taiwan. Please try your best to advertise and attend this wonderful event!</p>
 								</div>
 							</section>
 
