--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Yu-Chi Chen</title>
+		<title>Yu-Chi Chen 陳昱圻</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -55,7 +55,7 @@
 										<p> Postdoctoral Fellow </br> Institute of Information Science <br> Academia Sinica, Taiwan 
 									</header>
 									<p> 
-                                    Primary email: wycchen at iis.sinica.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="https://wycchen.github.io">wycchen.github.io</a> <br> <br> Recently, we organize an experimental event, <a href="https://theoryday.github.io/">Theory Day in Taiwan</a>, that aims to stimulate interaction and discussion for theoretical computer science researchers in Taiwan. Please try your best to advertise and attend this wonderful event!</p>
+                                    Primary email: wycchen at iis.sinica.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="https://wycchen.github.io">wycchen.github.io</a> <br> <br> Recently, we organize an experimental event, <a href="https://theoryday.github.io/">Theory Day in Taiwan</a>, that aims to stimulate interaction and discussion for theoretical computer science researchers in Taiwan. Please try your best to advertise and attend this wonderful event! The 2nd Theory Day will be held in HsinChu on 17th May! </p>
 								</div>
 							</section>
 
@@ -63,7 +63,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Short Bio</h3>
-									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and supported by Academia Sinica Postdoctoral Fellowship. <br>  
+									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and granted by Academia Sinica Postdoctoral Fellowship. <br>  
                                     
                                     <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br>
                                     
