--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/pic_web.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/pic_yc.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Yu-Chi Chen</a></h1>
 					<p>Postdoctoral Fellow </br> Institute of Information Science </br> Academia Sinica, Taiwan </p>
 				</header>
@@ -63,11 +63,13 @@
 							<section id="two">
 								<div class="container">
 									<h3>Short Bio</h3>
-									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and granted by Academia Sinica Postdoctoral Fellowship. <br>  
+									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and granted by Academia Sinica Postdoctoral Fellowship. <br>  <br>
                                     
-                                    <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br>
+                                    <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br> <br>
                                     
-                                    <strong>Work Experiments: </strong> In 2013, I was a (long-term) visiting scholar in Department of Electrical Engineering, University of Washington, hosted by Prof. Jenq-Neng Hwang and supported by Graduate Student Study Abroad Program of Taiwan NSC. In summer 2015, I was an instructor of cryptography summer school organized by Dr. Chia-Liang Sun in Institute of Mathematics, Academia Sinica. 
+                                    <strong>Work Experiments: </strong> In 2013, I was a (long-term) visiting scholar in Department of Electrical Engineering, University of Washington, hosted by Prof. Jenq-Neng Hwang and supported by Graduate Student Study Abroad Program of Taiwan NSC. In summer 2015, I was an instructor of cryptography summer school organized by Dr. Chia-Liang Sun in Institute of Mathematics, Academia Sinica. <br><br>
+                                    <strong>Honer:</strong> Academia Sinica Postdoctoral Fellowship, Academia Sinica (2015-2017), Student Academic Publication Award, National Chung Hsing University (2013), and Graduate Student Study Abroad Program, Taiwan National Science Council (2012).
+
                                     </p>
 							<!--		<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
