--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     
                                     <br> <br> 
                                     
-                                    In fall 2016, I will teach Cryptography in Department of Mathematics, SooChow University.
+                                    In fall 2016, I will teach Cryptography (MMA61001) in Department of Mathematics, SooChow University.
 
 								</div>
 							</section>
