--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                                     
                                     <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br> <br>
                                     
-                                    <strong>Work Experiments: </strong> In 2013, I was a (long-term) visiting scholar in Department of Electrical Engineering, University of Washington, hosted by Prof. Jenq-Neng Hwang and supported by Graduate Student Study Abroad Program of Taiwan NSC. In summer 2015, I was an instructor of cryptography summer school organized by Dr. Chia-Liang Sun in Institute of Mathematics, Academia Sinica. <br><br>
-                                    <strong>Honer:</strong> Academia Sinica Postdoctoral Fellowship, Academia Sinica (2015-2017), Student Academic Publication Award, National Chung Hsing University (2013), and Graduate Student Study Abroad Program, Taiwan National Science Council (2012).
+                                    <strong>Work Experiences: </strong> In 2013, I was a (long-term) visiting scholar in Department of Electrical Engineering, University of Washington, hosted by Prof. Jenq-Neng Hwang and supported by Graduate Student Study Abroad Program of Taiwan NSC. In summers 2015 and 2016, I was an instructor of cryptography summer school organized by Dr. Chia-Liang Sun in Institute of Mathematics, Academia Sinica. <br><br>
+                                    <strong>Honor:</strong> Academia Sinica Postdoctoral Fellowship, Academia Sinica (2015-2017), Student Academic Publication Award, National Chung Hsing University (2013), and Graduate Student Study Abroad Program, Taiwan National Science Council (2012).
 
                                     </p>
 							<!--		<ul class="feature-icons">
