--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     
                                     <br> <br> 
                                     
-                                    In fall 2016, I will teach Cryptography (MMA61001) in Department of Mathematics, SooChow University.
+                                    In fall 2016, I teach <a href="https://wycchen.github.io/2016/MMA61001.htm">Cryptography (MMA61001)</a> in Department of Mathematics, SooChow University, and Network Security: Attacks and Defenses (CS355) in Department of Computer Science and Engineering, Yuan Ze University.
 
 								</div>
 							</section>
