--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Yu-Chi Chen</h2>
-										<p> Postdoctoral Fellow </br> Institute of Information Science <br> Academia Sinica, Taiwan 
+										<p>  Quick link: <br>[<a href="https://wycchen.github.io/2016/MMA61001.htm">Cryptography (MMA61001)</a>]
 									</header>
 									<p> 
                                     Primary email: wycchen at iis.sinica.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="https://wycchen.github.io">wycchen.github.io</a> 
@@ -68,7 +68,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Short Bio</h3>
-									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and granted by Academia Sinica Postdoctoral Fellowship. I also co-organized <a href="https://theoryday.github.io/">Theory Day in Taiwan</a>. <br>  <br>
+									<p>I am a postdoctoral fellow in Institute of Information Science, Academia Sinica, working under the supervision of Dr. Kai-Min Chung and granted by Academia Sinica Postdoctoral Fellowship. <br>  <br>
                                     
                                     <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br> <br>
                                     
