--- a/SecDay2016/index.html
+++ b/SecDay2016/index.html
@@ -79,7 +79,7 @@ attend.
 			<div class="wrapper style2">
 				<article id="information">
 					<header>
-						<h2>Theory Day Information</h2>
+						<h2>Security Day Information</h2>
 						<p> 
                         <strong>Date:</strong> Saturday, 10 December, 2016
                         <br>
