--- a/SecDay2016/index.html
+++ b/SecDay2016/index.html
@@ -187,7 +187,7 @@ attend.
                 <article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/Raylin.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/raylin.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
