--- a/SecDay2016/index.html
+++ b/SecDay2016/index.html
@@ -45,6 +45,7 @@
 							<p> <strong>Date: Saturday, 10 December, 2016 <br>
                             Location: TBA (Yaun Ze University, Taoyuan) </strong>
                             <br> 
+                            本活動由教育部104年度新型態資安實務課程計畫補助
                             <br>
                             <!-- Quick links: <a href="#schedule">Program</a>, <a href="#abstract">Talk Abstracts</a> <a href="public_data/Program2016A.pdf">[PDF]</a><br> -->
                             
@@ -124,7 +125,7 @@ attend.
 
 <tr style="background-color: rgb(255, 255, 255);" valign="top">
 <td>11.00 - 12.30<br> </td>
-<td> <i>Break and Discussion</i><br>
+<td> <i>Discussion</i><br>
 <i></i></td>
 </tr>
 
@@ -143,8 +144,7 @@ attend.
 
 <tr style="background-color: rgb(221, 221, 221);" valign="top">
 <td>14.30 - 15.00<br> </td>
-<td> <i>Break and Discussion
-</i><br>
+<td> <i>Discussion </i><br>
 <i></i></td>
 </tr>
 
