--- a/SecDay2016/index.html
+++ b/SecDay2016/index.html
@@ -135,13 +135,13 @@ attend.
 
 <tr style="background-color: rgb(221, 221, 221);" valign="top">
 <td>13.00 - 16.00<br> </td>
-<td><i> <strong>Tsung-Hsuan Hung</strong>, Introduction to Garbling and Its Application </i> <br>
+<td><i>Talk 2: <strong>Tsung-Hsuan Hung</strong>, Introduction to Garbling and Its Application </i> <br>
 <i></i></td>
 </tr>
 
 <tr style="background-color: rgb(255, 255, 255);" valign="top">
 <td>16.00 - 19.00<br> </td>
-<td> <i><strong>Chia-Mu Yu</strong>, Deduplicated Cloud Storage Security</i><br>
+<td><i>Talk 3: <strong>Chia-Mu Yu</strong>, Deduplicated Cloud Storage Security</i><br>
 <i></i></td>
 </tr>
 
