--- a/SecDay2016/index.html
+++ b/SecDay2016/index.html
@@ -43,7 +43,7 @@
 								<h1> <strong>2016 Yuan Ze Security Day</strong> </h1>
 							</header>
 							<p> <strong>Date: Saturday, 10 December, 2016 <br>
-                            Location: Room 3208, Yuan Ze Building 3 (Yaun Ze University, Taoyuan) 元智三館3208教室 </strong>
+                            Location: Room 3208, Yuan Ze Building 3 (Yuan Ze University, Taoyuan) 元智三館3208教室 </strong>
                             <br> 
                             本活動由教育部104年度新型態資安實務課程計畫補助
                             <br>
@@ -85,7 +85,7 @@ attend.
 						<p> 
                         <strong>Date:</strong> Saturday, 10 December, 2016
                         <br>
-                        <strong>Location:</strong> Room 3208, Yuan Ze Building 3, Yaun Ze U. (元智三館3208教室)					</p>
+                        <strong>Location:</strong> Room 3208, Yuan Ze Building 3, Yuan Ze U. (元智三館3208教室)					</p>
 					</header>
 
                     
