--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ In spring 2017, I will teach Cryptography (CS565) in Department of Computer Scie
 							<section id="three">
 								<div class="container">
 									<h3>Research</h3>
-									<p>The research page is under construction. For my publications, please check my <a href="https://scholar.google.com.tw/citations?hl=en&user=020I-sQAAAAJ">Google Scholar profile</a>, <a href="http://dblp.uni-trier.de/pers/hd/c/Chen:Yu=Chi">DBLP</a> or my <a href="YC-CV.pdf">CV</a> (under construction). My research interests include cryptography and information security. </p>
+									<p>The research page is under construction. For my publications, please check my <a href="https://scholar.google.com.tw/citations?hl=en&user=020I-sQAAAAJ">Google Scholar profile</a>, <a href="http://dblp.uni-trier.de/pers/hd/c/Chen:Yu=Chi">DBLP</a> or my <a href="https://dl.dropboxusercontent.com/u/10166587/Pub.pdf">publication list</a>. My research interests include cryptography and information security. </p>
 									
                                     <!--
                                     <div class="features">
