--- a/cislab/index.html
+++ b/cislab/index.html
@@ -6,8 +6,9 @@
 -->
 <html>
 	<head>
-        <meta name="og:image" content="images/CISlab_logo.png" />
+        
 		<title>CIS Lab@YZU</title>
+        <meta name="og:image" content="images/CISlab_logo.jpg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
