--- a/cislab/index.html
+++ b/cislab/index.html
@@ -10,8 +10,8 @@
 		<title>CIS Lab@YZU</title>
         <meta property="og:image:width" content="60"/>
         <meta property="og:image:height" content="60"/>
-        <meta name="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
-        <meta name="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
+        <meta property="og:image" content="CISlab_logo.png" />
+        <meta property="og:image" content="CISlab_logo2.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
