--- a/cislab/index.html
+++ b/cislab/index.html
@@ -8,8 +8,8 @@
 	<head>
         
 		<title>CIS Lab@YZU</title>
-        <meta property="og:image:width" content="200"/>
-        <meta property="og:image:height" content="200"/>
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" />
 		<meta charset="utf-8" />
