--- a/cislab/index.html
+++ b/cislab/index.html
@@ -11,6 +11,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
+        <meta property="og:site_name" content="BiiLabs — Blockchain Industry and Innovation Labs" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://wycchen.github.io/cislab/" />
+        <meta property="og:title" content="CIS Labs (YZU)" />
+        <meta property="og:description" content="Cryptography and Information Security" />
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
         <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" / -->
         
