--- a/cislab/index.html
+++ b/cislab/index.html
@@ -11,7 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
-        <meta property="og:site_name" content="BiiLabs — Blockchain Industry and Innovation Labs" />
+        <meta property="og:site_name" content="CIS Lab @ YZU" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://wycchen.github.io/cislab/" />
         <meta property="og:title" content="CIS Labs (YZU)" />
@@ -43,7 +43,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Cryptography and Information Security Lab</h1>
+							<h1>Cryptography and Information Security Lab @ YZU</h1>
 							<p></p>
 						</div>
 					</section>
