--- a/cislab/index.html
+++ b/cislab/index.html
@@ -9,7 +9,7 @@
         
 		<title>CIS Lab@YZU</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		
         <meta property="og:site_name" content="CIS Lab @ YZU" />
         <meta property="og:type" content="website" />
@@ -19,8 +19,8 @@
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
         <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" / -->
         
-        <link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <!--link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript -->
 	</head>
 	<body class="is-preload">
 
