--- a/cislab/index.html
+++ b/cislab/index.html
@@ -19,8 +19,8 @@
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
         <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" / -->
         
-        <!--link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript -->
+        <link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
