--- a/cislab/index.html
+++ b/cislab/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         
-		<title>CIS Lab@YZU</title>
+		<title>Cryptography and Information Security Lab @Dept.CSE, YZU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		
@@ -17,7 +17,7 @@
         <meta property="og:title" content="CIS Labs (YZU)" />
         <meta property="og:description" content="Cryptography and Information Security" />
         <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
-        <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" / -->
+        <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" />
         
         <link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="#intro">Intro</a></li>
 							<li><a href="#one">Team</a></li>
-                            <li><a href="#two">Resource</a></li>
+                            <li><a href="#two">Research</a></li>
 						</ul>
 					</nav>
 				</div>
