--- a/cislab/index.html
+++ b/cislab/index.html
@@ -16,8 +16,10 @@
         <meta property="og:url" content="http://wycchen.github.io/cislab/" />
         <meta property="og:title" content="CIS Labs (YZU)" />
         <meta property="og:description" content="Cryptography and Information Security" />
-        <meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
+        <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" / -->
         <!-- meta property="og:image" content="http://wycchen.github.io/cislab/CISlab_logo2.png" / -->
+        
+        <meta property="tangerine:image" content="http://wycchen.github.io/cislab/CISlab_logo.png" />
         
         <link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
