--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <strong>Work Experiences: </strong> <br> - Visiting scholar at the Department of Electrical Engineering, University of Washington, 2013 (supported by Graduate Student Study Abroad Program of Taiwan NSC). <br> - Postdoctoral fellow at Institute of Information Science, Academia Sinica, 2014-2017 (granted by Academia Sinica Postdoctoral Fellowship 2015-2017).
                                       <br> - Visiting scholar at Institute of Information Science, Academia Sinica, 2018. <br><br>
                                       
-                                    <strong>Honor:</strong>
+                                    <strong>Honor:</strong> <br> 
                                     - Project for Excellent Junior Research Investigators, Ministry of Science and Technology, (2020-2024) <br>
                                     - Short-term Visiting Program for Domestic Scholars, Academia Sinica (2018) <br>
                                     - The Best Journal Papers Award, Association for Algorithms and Computation Theory (2017) <br>
