--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>我們實驗室今年度目前已經收滿！ 請不要再來信詢問 </h2>
-										
+										<h3>我們實驗室碩士班今年度目前已經收滿！ 請不要再來信詢問 </h3> <br>
+										<h3>大三專題歡迎來信約討論！ </h3>
+										<hr>
 										<h2>Yu-Chi Chen</h2>
 										<p> Associate Professor <br> <a href="https://csie.ntut.edu.tw/index.php?Lang=en">Dept. Computer Science and Information Engineering</a> <br> <a href="https://www-en.ntut.edu.tw/">National Taipei University of Technology</a>
 									</header>
