--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h3>我們實驗室碩士班今年度目前已經收滿！ 請不要再來信詢問 </h3> <br>
-										<h3>大三專題歡迎來信約討論！ </h3><br>
+										<h3>我們實驗室碩士班113年度(秋季)、112年度(春季)熱烈招生中！ </h3> <br>
+										<h3>  </h3><br>
 										<h3>Our lab webpage is here: <a href="https://cislab-ntut.github.io/">CIS Lab</a> </h3>
 										<hr>
 										<h2>Yu-Chi Chen</h2>
