--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h3>我們實驗室碩士班113年度(秋季)、112年度(春季)熱烈招生中！ </h3> <br>
+										<h3>[2023/03/01更新]我們實驗室碩士班113年度(秋季)熱烈招收新生（目前資工碩還有位子、資安碩滿了、資工博或資安博看緣分） </h3> <br>
 										<h3>  </h3><br>
 										<h3>Our lab webpage is here: <a href="https://cislab-ntut.github.io/">CIS Lab</a> </h3>
 										<hr>
