--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 										<h3>Our lab webpage is here: <a href="https://cislab-ntut.github.io/">CIS Lab</a> </h3>
 										<hr>
 										<h2>Yu-Chi Chen</h2>
-										<p> Associate Professor <br> <a href="https://csie.ntut.edu.tw/index.php?Lang=en">Dept. Computer Science and Information Engineering</a> <br> <a href="https://www-en.ntut.edu.tw/">National Taipei University of Technology</a>
+										<p> Associate Professor, <a href="https://csie.ntut.edu.tw/index.php?Lang=en">Dept. Computer Science and Information Engineering</a> <br> 
+										<p> Director, Ph.D. and M.S. Program in Information Security <br>	
+											<a href="https://www-en.ntut.edu.tw/">National Taipei University of Technology</a>
 									</header>
 									<p> 
                                     Primary email: wycchen at ntut.edu.tw <br> Alt email: wycchen at ieee.org <br> Web: <a href="https://wycchen.github.io">wycchen.github.io</a> <br><br>
@@ -74,7 +76,7 @@
 								<div class="container">
 									<h3>Short Bio</h3>
 
-									<p>I am an Associate Professor at the Department of Computer Science and Information Engineering, National Taipei University of Technology. <br><br>
+									<p>I am an Associate Professor at the Department of Computer Science and Information Engineering, National Taipei University of Technology. I am also the Director of Ph.D. and M.S. Program in Information Security. <br><br>
                                     
                                     <strong>Education: </strong> I received the B.S., M.S., and Ph.D. degrees from Department of Computer Science and Engineering, National Chung-Hsing University, Taiwan, in 2008, 2009, and 2014 respectively. My advisor was Prof. Gwoboa Horng. <br> <br>
                                     
