--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 				<header>
 					<span class="image avatar"><img src="images/pic_yc.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Yu-Chi Chen</a></h1>
-					<p>Associate Professor <br> Dept. CSIE, Taipei Tech</a></p>
+					<p>Associate Professor, Dept. CSIE <br>
+					Director, Program of Information Security
+						<br> Taipei Tech</a></p>
                     
 				</header>
 				<nav id="nav">
