--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 									</ul>
                                       
                                     <strong>Honor:</strong> <br>
-									- The Best Journal Paper Award, Taiwan Association of Cloud Computing (2023).
+									- Outstanding Research Award from the College of EECS, NTUT (2024) <br>
+									- The Best Journal Paper Award, Taiwan Association of Cloud Computing (2023) <br>
                                     - Young Scholar Research Award, Yuan Ze University (2020) <br>
                                     - Innovation in Teaching Award, Yuan Ze University (2020) <br>
                                     - Project for Excellent Junior Research Investigators, Ministry of Science and Technology, (2020-2024) <br>
