--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									</ul>
                                       
                                     <strong>Honor:</strong> <br>
-									- Outstanding Research Award from the College of EECS, NTUT (2024) <br>
+									- Outstanding Research Award from the College of EECS, National Taipei University of Technology (2024) <br>
 									- The Best Journal Paper Award, Taiwan Association of Cloud Computing (2023) <br>
                                     - Young Scholar Research Award, Yuan Ze University (2020) <br>
                                     - Innovation in Teaching Award, Yuan Ze University (2020) <br>
