--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/pic_yc.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/photo_YC.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Yu-Chi Chen</a></h1>
 					<p>Associate Professor, Dept. CSIE <br>
 					Director, Program of Information Security
