--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h3>[2023/04/13更新]我們實驗室碩士班113年度(秋季)已滿 </h3> <br>
+										<h3>[2024/10/15] 我們實驗室碩士班114年度(秋季)準備開始收人 </h3> <br>
 										<h3>  </h3><br>
 										<h3>Our lab webpage is here: <a href="https://cislab-ntut.github.io/">CIS Lab</a> </h3>
 										<hr>
