--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<h3>Our lab webpage is here: <a href="https://cislab-ntut.github.io/">CIS Lab</a> </h3>
 										<hr>
 										<h2>Yu-Chi Chen</h2>
-										<p> Associate Professor, <a href="https://csie.ntut.edu.tw/index.php?Lang=en">Dept. Computer Science and Information Engineering</a> <br> 
+										<p> Professor, <a href="https://csie.ntut.edu.tw/index.php?Lang=en">Dept. Computer Science and Information Engineering</a> <br> 
 										<p> Director, Ph.D. and M.S. Program in Information Security <br>	
 											<a href="https://www-en.ntut.edu.tw/">National Taipei University of Technology</a>
 									</header>
