--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/photo_YC.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Yu-Chi Chen</a></h1>
-					<p>Associate Professor, Dept. CSIE <br>
+					<p>Professor, Dept. CSIE <br>
 					Director, Program of Information Security
 						<br> Taipei Tech</a></p>
                     
